fix: footer item style on mobile

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -701,6 +701,10 @@ aside + main {
     margin-bottom: 0;
   }
 
+  .footer__link-item {
+    display: inline-flex;
+  }
+
   .footer__bottom {
     flex-direction: column;
     align-items: start;
